Added more accented characters

--- a/mathgen/output/test.tex
+++ b/mathgen/output/test.tex
@@ -40,9 +40,12 @@ Ave Awe Too Vow Wow \textsc{Ave Awe Tae Vax Vow Wow}
 5555555555
 
 \`a \'a \`e \'e \`i \'i \`o \'o \`u \'u
+\^a \^e \^i \^o \^u
+\"a \"e \"i \"o \"u
 
 }
 
+\fontspec{Linux Libertine O}\thetest
 \fontspec{cenexp.otf}\thetest
 \fontspec{cenexpi.otf}\thetest
 \fontspec{cenexpb.otf}\thetest
