--- a/mathgen/output/test.tex
+++ b/mathgen/output/test.tex
@@ -23,9 +23,11 @@ UAUALUOU
 
 1234567890 .,`` '' ` ' :;/?[]!@\#\$\%\&*()-=+ -- ---
 
-I finally flew cuffed iffily affluent.
+I finally flew cuffed iffily affluent. F.3d
 
-HARVARD. \textsc{This is awesome!}
+.F.P.V.W.T.Y.J.N.U. \textsc{.f.p.v.w.t.y.j.n.u.}
+
+HARVARD. \textsc{This is awesome!} `f' ``f''
 
 PAVAYOW Av Vo ro Fi Fow r. v, ``AVAYA'' ``doob'' TUV. u. P. L'
 
@@ -45,7 +47,7 @@ Ave Awe Too Vow Wow \textsc{Ave Awe Tae Vax Vow Wow}
 
 }
 
-\fontspec{Linux Libertine O}\thetest
+%\fontspec{Linux Libertine O}\thetest
 \fontspec{cenexp.otf}\thetest
 \fontspec{cenexpi.otf}\thetest
 \fontspec{cenexpb.otf}\thetest
