Improved hyphen and dot kerning

--- a/mathgen/output/test.tex
+++ b/mathgen/output/test.tex
@@ -25,7 +25,17 @@ UAUALUOU
 
 I finally flew cuffed iffily affluent. F.3d
 
-.F.P.V.W.T.Y.J.N.U. \textsc{.f.p.v.w.t.y.j.n.u.}
+.A.B.C.D.E.F.G.H.I.J.K.L.M.N.O.P.Q.R.S.T.U.V.W.X.Y.Z.
+
+.a.b.c.d.e.f.g.h.i.j.k.l.m.n.o.p.q.r.s.t.u.v.w.x.y.z.
+
+\textsc{.a.b.c.d.e.f.g.h.i.j.k.l.m.n.o.p.q.r.s.t.u.v.w.x.y.z.}
+
+-A-B-C-D-E-F-G-H-I-J-K-L-M-N-O-P-Q-R-S-T-U-V-W-X-Y-Z-
+
+-a-b-c-d-e-f-g-h-i-j-k-l-m-n-o-p-q-r-s-t-u-v-w-x-y-z-
+
+\textsc{-a-b-c-d-e-f-g-h-i-j-k-l-m-n-o-p-q-r-s-t-u-v-w-x-y-z-}
 
 HARVARD. \textsc{This is awesome!} `f' ``f''
 
